[package]
name = "nostringer"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr = { version = "0.40.0" }
k256 = { version = "0.13", features = ["arithmetic", "sha256"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "2.0.12"
subtle = "2.5"
generic-array = "0.14"
typenum = "1.17"
lazy_static = "1.5.0"
#rand_core = "0.6"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }


[dev-dependencies]
criterion = "0.5"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[[bench]]
name = "ring_signatures"
harness = false
