[workspace]
members = ["crates/nostringer", "crates/nostringer_cli"]
resolver = "2"

[workspace.package]
version = "0.1.2"
authors = ["AbdelStark <@AbdelStark>"]
description = "A Rust implementation of the ring signature scheme in the nostringer TypeScript library"
repository = "https://github.com/AbdelStark/nostringer-rs"
homepage = "https://github.com/AbdelStark/nostringer-rs"
edition = "2021"
license = "MIT"
keywords = ["cryptography", "ring-signature", "nostr", "privacy"]
categories = ["cryptography", "authentication"]

[workspace.dependencies]
# Core crate dependencies
hex = "0.4.3"
k256 = { version = "0.13.1", features = ["ecdsa"] }
rand = "0.8.5"
sha2 = "0.10.7"
subtle = "2.5.0"
thiserror = "1.0.49"
serde = { version = "1.0.188", features = ["derive"] }

# CLI crate dependencies
clap = { version = "4.4.3", features = ["derive"] }
anyhow = "1.0.75"
colored = "2.0.4"

# Development dependencies
criterion = { version = "0.5.1", features = ["html_reports"] }

[workspace.metadata]
# Controls what crates get published
# `true` means all crates will be published
publish.publish-all = true
