[package]
name = "nostringer"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
hex = { workspace = true }
k256 = { workspace = true, features = ["arithmetic"] }
rand = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
colored = "2.0"

[features]
default = []
serde = ["dep:serde"]

[[bench]]
name = "ring_signatures"
harness = false
