[package]
name = "nostringer"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
hex = { workspace = true }
k256 = { workspace = true, features = ["arithmetic"] }
rand = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = "0.11"
base64 = "0.22"
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_bytes = "0.11.17"
nostr = "0.40.0"
serde_json = "1.0.140"
zerocopy = "0.8.24"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
colored = "2.0"
wasm-bindgen-test = "0.3"

[features]
default = []
serde = []
wasm = [
    "dep:wasm-bindgen",
    "dep:getrandom",
    "dep:js-sys",
    "dep:console_error_panic_hook",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "ring_signatures"
harness = false
