[package]
name = "nostringer_cli"
version.workspace = true
authors.workspace = true
description = "Command-line interface for the nostringer ring signature library"
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
#nostringer = { version = "0.1.8", features = ["wasm"] }
nostringer = { path = "../nostringer" }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
hex = { workspace = true }
serde_json = "1.0.113"
rand = "0.8.5"
nostr = "0.40.0"
